# python-template

./: .gitattributes  .gitignore  .pre-commit-config.yml  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: unit-tests.yml  validation.yml
src/: __main__.py
tests/: helpers.py  test_helpers.py
